--- a/app/views/users/_profile_window.html.erb
+++ b/app/views/users/_profile_window.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= image_tag("https://res.cloudinary.com/duufhyqzx/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,b_rgb:262c35/v1678047757/Capybara%20profile%20picture/stephanie-liverani-Zz5LQe-VSMY-unsplash_vttxk0.jpg", class: "avatar") %>
+  <%= cl_image_tag user.photo.key, height: 300, width: 400, crop: :fill, class: "avatar" %>
   <div class="user-info-box">
     <h2><%= user.first_name%> <span class="text-muted"><%= user.age %></span></h2>
     <% user.categories.each do |c| %>
