--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 // External libraries
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
+@import "tom-select/src/scss/tom-select.scss";
 
 
 @import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
