--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,10 +1,12 @@
 .avatar {
   width: 40px;
-  border-radius: 20px;
+  border-radius: 50%;
 }
+
 .avatar-large {
   width: 56px;
-  border-radius: 20px;
+  height: 56px;
+  border-radius: 50%;
 }
 
 .avatar-square {
