--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -19,7 +19,7 @@
         </div>
         <div class="form-actions">
           <%= f.submit "Search", class: "btn btn-primary search-btn mx-auto" %>
-          <%= link_to "Clear Filter", user_search_map_path, class: "btn btn-alert border-light text-light mx-auto"%>
+          <%= link_to "Clear Filter", user_search_map_path, class: "btn border-light text-light mx-auto"%>
         </div>
       <% end %>
     </div>
