--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,12 +1,10 @@
 .avatar {
   width: 40px;
-  border-radius: 50%;
+  border-radius: 20px;
 }
-
 .avatar-large {
   width: 56px;
-  height: 56px;
-  border-radius: 50%;
+  border-radius: 20px;
 }
 
 .avatar-square {
